
[tool.semantic_release]
version_variable = "aps2mqtt/__init__.py:__version__"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
dist_path = "dist/"
upload_to_pypi = "true"
upload_to_release = "true"

[tool.poetry]
name = "aps2mqtt"
version = "1.2.0"
description = "Publish APS ECU data to MQTT broker"
authors = ["Florian Ligneul <contact@florian-ligneul.fr>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "aps2mqtt"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"
paho-mqtt = "^1.6.1"
pyyaml = "^6.0.2"
str2bool = "^1.1"
suntime = "^1.2.5"
python-semantic-release = "^10.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pylint-exit = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
