[metadata]
name = aps2mqtt
author = Florian Ligneul
author_email = contact@florian-ligneul.fr
description = Access APSystems ECU data over MQTT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fligneul/aps2mqtt
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires =  
    requests~=2.32
    paho.mqtt~=2.1
    pyyaml~=6.0
    numpy~=2.3
    suntime~=1.3
    str2bool~=1.1
    tzdata>=2025.2

[options.packages.find]
include = aps2mqtt, aps2mqtt.*